Fix mobile nav: language button alignment with menu items

--- a/themes/yorukumo/source/css/_partial/header.styl
+++ b/themes/yorukumo/source/css/_partial/header.styl
@@ -258,6 +258,9 @@
     left 0
     right 0
     height calc(100vh - 4rem)
+    flex-direction column
+    align-items stretch
+    gap 0
     opacity 0
     visibility hidden
     transform translateY(-10px)
